Added bundleentry and bundleresource url support.